--- a/Ecommerce_Shop_NDNB/Areas/Admin/Views/Brand/Index.cshtml
+++ b/Ecommerce_Shop_NDNB/Areas/Admin/Views/Brand/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["title"] = "Brands List";
     int stt = 1;
 }
-<h1>List Category</h1>
+<h1>List Brands</h1>
 <div>
     <a asp-action="Create" asp-controller="Brand" type="button" class="btn btn-primary btn-lg">Add</a>
 </div>
