--- a/Ecommerce_Shop_NDNB/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Ecommerce_Shop_NDNB/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -70,6 +70,8 @@
 								<li><a asp-controller="Category">Categories</a></li>
 								<li><a asp-controller="Brand">Brands</a></li>
 								<li><a asp-controller="Order">Orders</a></li>
+								<li><a asp-controller="Role">Roles</a></li>
+								<li><a asp-controller="User">Users</a></li>
 							</ul>
 						</div>
 					</div>
