--- a/Ecommerce_Shop_NDNB/Views/Account/Create.cshtml
+++ b/Ecommerce_Shop_NDNB/Views/Account/Create.cshtml
@@ -23,6 +23,11 @@
 							<span asp-validation-for="Email" class="text-danger" />
 						</div>
 						<div class="form-group">
+							<label>Phone Number</label>
+							<input class="form-control" asp-for="Phone" />
+							<span asp-validation-for="Phone" class="text-danger" />
+						</div>
+						<div class="form-group">
 							<label>Password</label>
 							<input class="form-control" asp-for="Password" />
 							<span asp-validation-for="Password" class="text-danger" />
