--- a/Ecommerce_Shop_NDNB/Areas/Admin/Views/Brand/Update.cshtml
+++ b/Ecommerce_Shop_NDNB/Areas/Admin/Views/Brand/Update.cshtml
@@ -27,7 +27,7 @@
 
     <div class="d-flex justify-content-between">
         <button type="submit" class="btn btn-primary fw-bold px-4">Submit</button>
-        <a asp-action="Index" asp-controller="Product" class="btn btn-secondary">Back to List</a>
+        <a asp-action="Index" asp-controller="Brand" class="btn btn-secondary">Back to List</a>
     </div>
 </form>
 
