--- a/Ecommerce_Shop_NDNB/Areas/Admin/Views/Product/Index.cshtml
+++ b/Ecommerce_Shop_NDNB/Areas/Admin/Views/Product/Index.cshtml
@@ -44,8 +44,23 @@
             </tr>
             stt++;
         }
+       
     </tbody>
+    
 </table>
+<!-- Nút phân trang -->
+@if (ViewBag.Pager != null && ViewBag.Pager.TotalPages > 1)
+{
+    <div class="pagination-container">
+        <div class="pagination">
+            @for (int i = ViewBag.Pager.StartPage; i <= ViewBag.Pager.EndPage; i++)
+            {
+                <a class="@(i == ViewBag.Pager.CurrentPage ? "active" : "")"
+                   href="@Url.Action("Index", new { pg = i })">@i</a>
+            }
+        </div>
+    </div>
+}
 
 @if (TempData["SuccessMessage"] != null)
 {
