--- a/Ecommerce_Shop_NDNB/Areas/Admin/Views/Order/Index.cshtml
+++ b/Ecommerce_Shop_NDNB/Areas/Admin/Views/Order/Index.cshtml
@@ -45,5 +45,18 @@
         }
     </tbody>
 </table>
+<!-- Nút phân trang -->
+@if (ViewBag.Pager != null && ViewBag.Pager.TotalPages > 1)
+{
+    <div class="pagination-container">
+        <div class="pagination">
+            @for (int i = ViewBag.Pager.StartPage; i <= ViewBag.Pager.EndPage; i++)
+            {
+                <a class="@(i == ViewBag.Pager.CurrentPage ? "active" : "")"
+                   href="@Url.Action("Index", new { pg = i })">@i</a>
+            }
+        </div>
+    </div>
+}
 
 
