--- a/Ecommerce_Shop_NDNB/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Ecommerce_Shop_NDNB/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Areas Admin</title>
-    
+    <link href="~/css/paginate.css" rel="stylesheet" />
 	<link href="~/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="~/Ecommerce_Shop_NDNB.styles.css" asp-append-version="true" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet" />
