update new years

--- a/Ecommerce_Shop_NDNB/Areas/Admin/Views/Category/Index.cshtml
+++ b/Ecommerce_Shop_NDNB/Areas/Admin/Views/Category/Index.cshtml
@@ -9,7 +9,7 @@
     <a asp-action="Create" asp-controller="Category" type="button" class="btn btn-primary btn-lg">Add</a>
 </div>
 
-<table class="table">
+<table class="table" id="myTable">
     <thead>
         <tr>
             <th scope="col">Stt</th>
@@ -17,6 +17,7 @@
             <th scope="col">Category Description</th>
             <th scope="col">Category Slug</th>
             <th scope="col">Category Status</th>
+            <th scope="col">Actions</th>
         </tr>
     </thead>
     <tbody>
