--- a/Ecommerce_Shop_NDNB/Areas/Admin/Views/Brand/Index.cshtml
+++ b/Ecommerce_Shop_NDNB/Areas/Admin/Views/Brand/Index.cshtml
@@ -8,7 +8,7 @@
     <a asp-action="Create" asp-controller="Brand" type="button" class="btn btn-primary btn-lg">Add</a>
 </div>
 
-<table class="table">
+<table class="table" id="myTable">
     <thead>
         <tr>
             <th scope="col">Stt</th>
@@ -16,6 +16,7 @@
             <th scope="col">Brand Description</th>
             <th scope="col">Brand Slug</th>
             <th scope="col">Brand Status</th>
+            <th scope="col">Actions</th>
         </tr>
     </thead>
     <tbody>
