--- a/Ecommerce_Shop_NDNB/Areas/Admin/Views/Order/Index.cshtml
+++ b/Ecommerce_Shop_NDNB/Areas/Admin/Views/Order/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1>List Order</h1>
 
-<table class="table">
+<table class="table" id="myTable">
     <thead>
         <tr>
             <th scope="col">Stt</th>
@@ -14,6 +14,8 @@
             <th scope="col">UserName</th>
             <th scope="col">Order Date</th>
             <th scope="col">Order Status</th>
+            <th scope="col">Date</th>
+            <th scope="col">Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -32,10 +34,10 @@
                     }
                     else
                     {
-                        <span class="text text-danger">Đơn hàng thành công</span>
+                        <span class="text text-danger">Đã xử lý</span>
                     }
                 </td>
-
+                <td>@item.CreatedDate.ToString("dd/MM/yyyy HH:mm:ss")</td>
                 <td>
                     <a asp-action="ViewOrder" asp-controller="Order" asp-route-ordercode="@item.OrderCode" type="button" class="btn btn-success">View Order</a>
                
