--- a/Ecommerce_Shop_NDNB/Areas/Admin/Views/Product/Create.cshtml
+++ b/Ecommerce_Shop_NDNB/Areas/Admin/Views/Product/Create.cshtml
@@ -4,39 +4,41 @@
 }
 <form asp-action="Create" enctype="multipart/form-data" class="p-4 border rounded shadow-sm bg-light">
     <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
-    <div class="mb-3 form-group">
+    <div class="form-group">
         <label class="form-label fw-semibold">Name</label>
         <input class="form-control" asp-for="Name"/>
         <span asp-validation-for="Name" class="text-danger" />
     </div>
-    <div class="mb-3 form-group">
+    <div class="form-group">
         <label class="form-label fw-semibold">Price</label>
-        <input type="number" class="form-control" asp-for="Price" />
+        <input asp-for="Price" pattern="[0-9.,]+" class="form-control typing-price" />
+        <span id="price-convert"></span>
         <span asp-validation-for="Price" class="text-danger" />
     </div>
-    <div class="mb-3 form-group">
+    <div class="form-group">
         <label class="form-label fw-semibold">Description</label>
         <input class="form-control" asp-for="Description" />
         <span asp-validation-for="Description" class="text-danger" />
     </div>
-    <div class="mb-3 form-group">
+    <div class="form-group">
         <label class="form-label fw-semibold">Category</label>
         <select asp-for="CategoryId" asp-items="ViewBag.Categories" class="form-select">
             <option selected>Select Category</option>
         </select>
         <span asp-validation-for="CategoryId" class="text-danger"></span>
     </div>
-    <div class="mb-3 form-group">
+    <div class="form-group">
         <label class="form-label fw-semibold">Brand</label>
         <select asp-for="BrandId" asp-items="ViewBag.Brands" class="form-select">
             <option selected>Select Brand</option>
         </select>
         <span asp-validation-for="BrandId" class="text-danger"></span>
     </div>
-    <div class="mb-3 form-group">
+    <div class="form-group">
         <label class="form-label fw-semibold">Image</label>
         <input class="form-control" asp-for="ImageUpload" />
         <span asp-validation-for="ImageUpload" class="text-danger" />
+        <img id="imgPreview" class="pt-2"/>
     </div>
 
     <div class="d-flex justify-content-between">
@@ -44,5 +46,29 @@
         <a asp-action="Index" asp-controller="Product" class="btn btn-secondary">Back to List</a>
     </div>
 </form>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>.
+<script>
+    $(document).ready(function () {
+        $(".typing-price").on("keyup", function () {
+            var currency_input = $(this).val();
+            $("#price-convert").html(new Intl.NumberFormat('vn-VN', { style: 'currency', currency: 'VND' }).format(currency_input));
+        });
+
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+                reader.onload = function (e) {
+                    $("#imgPreview").attr("src", e.target.result).css("max-width", "150px").css("max-height", "150px");
+                };
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+
+        $("input[name='ImageUpload']").change(function () {
+            readURL(this);
+        });
+    });
+</script>
+
 
 
