--- a/Ecommerce_Shop_NDNB/Areas/Admin/Views/Product/Index.cshtml
+++ b/Ecommerce_Shop_NDNB/Areas/Admin/Views/Product/Index.cshtml
@@ -8,11 +8,13 @@
     <a asp-action="Create" asp-controller="Product" type="button" class="btn btn-primary btn-lg">Add</a>
 </div>
 
-<table class="table">
+<table class="table" id="myTable">
     <thead>
         <tr>
             <th scope="col">Stt</th>
             <th scope="col">Product Name</th>
+            <th scope="col">Product Quantity</th>
+            <th scope="col">Product Sold</th>
             <th scope="col">Product Description</th>
             <th scope="col">Product Price</th>
             <th scope="col">Product Image</th>
@@ -29,6 +31,10 @@
             <tr>
                 <th scope="row">@stt</th>
                 <td>@item.Name</td>
+                <td><h3>@item.Quantity</h3>
+                    <a asp-action="AddQuantity" asp-controller="Product" asp-route-Id="@item.Id">Add Quantity</a>
+                </td>
+                <td><b>@item.Sold</b></td>
                 <td>@item.Description</td>
                 <td>@item.Price</td>
                 <td><img width="120" src="~/image/@item.Image" /></td>
