--- a/Ecommerce_Shop_NDNB/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Ecommerce_Shop_NDNB/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -13,6 +13,9 @@
 	<link href="~/css/animate.css" rel="stylesheet">
 	<link href="~/css/main.css" rel="stylesheet">
 	<link href="~/css/responsive.css" rel="stylesheet">
+	<link href="//cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css" rel="stylesheet" />
+	<link href="https://cdn.datatables.net/buttons/3.2.1/css/buttons.dataTables.css" rel="stylesheet" />
+	
 </head>
 <body>
 	<header id="header">
@@ -67,11 +70,14 @@
 						<div class="mainmenu pull-left">
 							<ul class="nav navbar-nav collapse navbar-collapse">
 								<li><a asp-controller="Product">Products</a></li>
+								<li><a asp-controller="Shipping">Shipping</a></li>
 								<li><a asp-controller="Category">Categories</a></li>
 								<li><a asp-controller="Brand">Brands</a></li>
+								<li><a asp-controller="Slider">Sliders</a></li>
 								<li><a asp-controller="Order">Orders</a></li>
 								<li><a asp-controller="Role">Roles</a></li>
 								<li><a asp-controller="User">Users</a></li>
+								<li><a asp-controller="Contact">Contact</a></li>
 							</ul>
 						</div>
 					</div>
@@ -102,7 +108,30 @@
 	<script src="~/js/price-range.js"></script>
 	<script src="~/js/jquery.prettyPhoto.js"></script>
 	<script src="~/js/main.js"></script>
+	<script src="//cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+	<script src="https://cdn.datatables.net/buttons/3.2.1/js/dataTables.buttons.js"></script>
+	<script src="https://cdn.datatables.net/buttons/3.2.1/js/buttons.dataTables.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
+	<script src="https://cdn.datatables.net/buttons/3.2.1/js/buttons.html5.min.js"></script>
+	<script src="https://cdn.datatables.net/buttons/3.2.1/js/buttons.print.min.js"></script>
+
+
+
 	@await RenderSectionAsync("Scripts", required: false)
+
+	<!--Data Tablejs-->
+	<script>
+		let table = new DataTable('#myTable', {
+			layout: {
+				topStart: {
+					buttons: ['copy', 'csv', 'excel', 'pdf', 'print']
+				}
+			}
+		});
+	</script>
 </body>
 </html>
