--- a/Ecommerce_Shop_NDNB/Areas/Admin/Views/User/Index.cshtml
+++ b/Ecommerce_Shop_NDNB/Areas/Admin/Views/User/Index.cshtml
@@ -9,7 +9,7 @@
     <a asp-action="Create" asp-controller="User" type="button" class="btn btn-primary btn-lg">Add</a>
 </div>
 
-<table class="table">
+<table class="table" id="myTable">
     <thead>
         <tr>
             <th scope="col">Stt</th>
@@ -18,6 +18,7 @@
             <th scope="col">Email</th>
             <th scope="col">Phone Number</th>
             <th scope="col">Roles</th>
+            <th scope="col">Actions</th>
         </tr>
     </thead>
     <tbody>
