--- a/Ecommerce_Shop_NDNB/Areas/Admin/Views/Order/ViewOrder.cshtml
+++ b/Ecommerce_Shop_NDNB/Areas/Admin/Views/Order/ViewOrder.cshtml
@@ -35,7 +35,7 @@
             <
             <td colspan="5">Total</td>
             <td><h2>@total.ToString("C")</h2></td>
-            <td></td>
+            <td>Shipping Cost: @ViewBag.ShippingCost.ToString("#,##0 VND")</td>
             <td></td>
             <td></td>
             <td></td>
