--- a/Ecommerce_Shop_NDNB/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Ecommerce_Shop_NDNB/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -71,6 +71,7 @@
 							<ul class="nav navbar-nav collapse navbar-collapse">
 								<li><a asp-controller="Product">Products</a></li>
 								<li><a asp-controller="Shipping">Shipping</a></li>
+								<li><a asp-controller="Coupon">Coupon</a></li>
 								<li><a asp-controller="Category">Categories</a></li>
 								<li><a asp-controller="Brand">Brands</a></li>
 								<li><a asp-controller="Slider">Sliders</a></li>
