--- a/Ecommerce_Shop_NDNB/Views/Shared/_Layout.cshtml
+++ b/Ecommerce_Shop_NDNB/Views/Shared/_Layout.cshtml
@@ -14,6 +14,9 @@
 	<link href="~/css/animate.css" rel="stylesheet">
 	<link href="~/css/main.css" rel="stylesheet">
 	<link href="~/css/responsive.css" rel="stylesheet">
+
+	<link rel="stylesheet" href="https://code.jquery.com/ui/1.14.1/themes/base/jquery-ui.css">
+
 </head>
 <body>
 	<header id="header">
