--- a/Ecommerce_Shop_NDNB/Areas/Admin/Views/Order/Index.cshtml
+++ b/Ecommerce_Shop_NDNB/Areas/Admin/Views/Order/Index.cshtml
@@ -12,6 +12,7 @@
             <th scope="col">Stt</th>
             <th scope="col">Order Code</th>
             <th scope="col">Shipping Cost</th>
+            <th scope="col">Coupon Code</th>
             <th scope="col">UserName</th>
             <th scope="col">Order Date</th>
             <th scope="col">Order Status</th>
@@ -27,6 +28,7 @@
                 <th scope="row">@stt</th>
                 <td>@item.OrderCode</td>
                 <td>@item.ShippingCost.ToString("#, ##0 VND")</td>
+                <td>@item.CouponCode</td>
                 <td>@item.UserName</td>
                 <td>@item.CreatedDate</td>
                 <td>
